# ttt

./: .gitignore  Doxyfile  README.md  meson.build
include/megatech/ttt/: enums.hpp  file_lock.hpp  game.hpp  game_file.hpp  strategy.hpp  utility.hpp
include/megatech/ttt/details/: data_file.hpp  interpreter.hpp  lockfile.hpp  state.hpp
src/: delete_game.cpp  display_game.cpp  new_game.cpp  take_turn.cpp
src/megatech/ttt/: enums.cpp  file_lock.cpp  game.cpp  game_file.cpp  response_001.inl  response_002.inl  secret_001.inl  secret_002.inl  strategy.cpp  utility.cpp
src/megatech/ttt/details/: interpreter.cpp  lockfile.cpp  state.cpp
tests/: enum_strings.cpp  file_lock.cpp  file_locking.cpp  frobnication.cpp  game_file_io.cpp  game_mode_strings.cpp  home_directories.cpp  interpreter.cpp  meson.build  strategy.cpp  turn_taking.cpp  utilities.cpp
tools/: generate_coverage.py
