if true
  file_locking_test_exe = executable('file_locking_test', files('file_locking.cpp'), dependencies: ttt_dep)
  test('File Locking', file_locking_test_exe)
  game_file_io_test_exe = executable('game_file_io_test', files('game_file_io.cpp'), dependencies: ttt_dep)
  test('Game File I/O', game_file_io_test_exe)
endif
